add some apis
